# piedra_papel_tijeras

./: .gitignore  README.md  pyproject.toml
src/piedra_papel_tijeras/: __main__.py  definitions.py  piedra_papel_tijeras.py  piedra_papel_tijeras_test.py
