[project]
name = "piedra_papel_tijeras"
version = "0.1.0"
dependencies = []
readme = "README.md"
requires-python = ">= 3.12.5"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
cli = { cmd = "python3 ./src/piedra_papel_tijeras/__main__.py" }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lab_piedra_papel_tijeras"]
